Edited wiki page Documentation through web user interface.

--- a/wiki/Documentation.wiki
+++ b/wiki/Documentation.wiki
@@ -1,3 +1,6 @@
 Documentation abut RLint
 
 = Slides =
+
+* <a href="http://research.mtv.corp.google.com:4444/pubversion?fp=525415807987355280">
+R User Conference 2014-07-02 slides (PDF)</a>
