--- a/wiki/Documentation.wiki
+++ b/wiki/Documentation.wiki
@@ -3,5 +3,5 @@ Documentation abut RLint
 = Slides =
 
 R User Conference 2014-07-02 slides deck is available at 
-* <a href="http://research.google.com/">
+* <a href="http://research.google.com/pubs/pub42577.html">
 Research at Google</a>.
